--- a/vim8/Dockerfile.plugins
+++ b/vim8/Dockerfile.plugins
@@ -3,22 +3,22 @@ FROM vim8:base
 USER vim
 
 RUN cd /home/vim/.vim/bundle && \
-    git clone https://github.com:Shougo/neocomplete.vim.git && \
-    git clone https://github.com:scrooloose/nerdtree.git && \
-    git clone https://github.com:mechatroner/rainbow_csv.git && \
-    git clone https://github.com:scrooloose/syntastic.git && \
+    git clone https://github.com/Shougo/neocomplete.vim.git && \
+    git clone https://github.com/scrooloose/nerdtree.git && \
+    git clone https://github.com/mechatroner/rainbow_csv.git && \
+    git clone https://github.com/scrooloose/syntastic.git && \
     git clone https://github.com/vim-airline/vim-airline.git && \
     git clone https://github.com/vim-airline/vim-airline-themes.git && \
     git clone https://github.com/altercation/vim-colors-solarized.git && \
     git clone https://github.com/ryanoasis/vim-devicons && \
-    git clone https://github.com:tpope/vim-fugitive.git && \
+    git clone https://github.com/tpope/vim-fugitive.git && \
     git clone https://github.com/airblade/vim-gitgutter.git && \
     git clone https://github.com/crusoexia/vim-monokai.git && \
     git clone https://github.com/tyrannicaltoucan/vim-quantum.git && \
-    git clone https://github.com:thinca/vim-quickrun.git && \
-    git clone https://github.com:ngmy/vim-rubocop.git && \
+    git clone https://github.com/thinca/vim-quickrun.git && \
+    git clone https://github.com/ngmy/vim-rubocop.git && \
     git clone https://github.com/tpope/vim-sensible.git && \
-    git clone https://github.com:tpope/vim-surround.git
+    git clone https://github.com/tpope/vim-surround.git
 
 ADD vimrc .vimrc
 ADD ~/ .
